Revert "Fix Responsive Navbar Alignment on Travel Website"

--- a/style.css
+++ b/style.css
@@ -31,19 +31,18 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: 100vw;;
-  color: #ffffff;
-  padding: 50px;
-  /* text-align: center; */
-  margin: 10px 0px 40px;
-  border-radius: 8px;
+  max-width: 80vw;;
+    color: #ffffff;
+    padding: 50px;
+    text-align: center;
+    margin: 20px 0px 60px;
+    border-radius: 8px;
 }
 nav ul {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   width: 100%;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   list-style-type: none;
   padding: 0;
@@ -52,9 +51,8 @@ nav ul {
 .hi ul li a{
   background-color: #fff;
   color: blue;
-  min-height:15vh;
-  font-size: 1.8rem;
-  font-weight: 500;
+  font-size: 2.2rem;
+  font-weight: 600;
   padding: 15px;
   border-radius: 7px;
   box-shadow: 0 3px 13px rgba(0, 0, 0, 0.35);
@@ -65,7 +63,6 @@ nav ul {
   color: white;
   box-shadow: 4px 4px 14px whitesmoke;
 }
-
 
 nav ul li {
   display: inline;
